--- a/src/app.scss
+++ b/src/app.scss
@@ -23,32 +23,29 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
     position: relative;
-}
 
-.text {
-    position: absolute;
-    top: 100%;
-    transform: translateY(-50%);
-    height: fit-content;
-    width: 50%;
-    padding: 36px;
-    background-color: #086788;
-    box-sizing: border-box;
-    border-radius: 8px;
+    h1 {
+        color: black;
+        font-family: "Merriweather";
+        font-size: 2.25rem;
+        margin: 0;
+    }
 
-    h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 16px;
-    color: white;
+    h2 {
+        color: black;
+        font-family: "Merriweather";
+        font-size: 2rem;
+        margin: 0;
     }
 
     p {
-    color: white;
+        color: black;
+        font-family: "Open Sans";
+        font-size: 1.25rem;
+        margin: 0;
     }
 }
-
-
 
 
 
